--- a/assets/style.css
+++ b/assets/style.css
@@ -5,4 +5,8 @@ body {
   margin: 0;
   min-height: 100%;
   border: 15px solid black;
+  font-family: 'tuliaRegular', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'tuliaBold', "arial black";
 }
