--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'tuliaBold', "arial black";
 }
+
+header {
+  text-align: center;
+}
+
+.nav-main ul {
+  margin: 1em 0;
+  padding: 0;
+  list-style: none;
+}
+.nav-main li {
+  display: inline-block;
+}
