--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -15,6 +15,9 @@
       &:before {
         content: "– ";
       }
+      a {
+        border: none;
+      }
     }
     ul {
       position: absolute;
