Improve vision page

--- a/templates/page-vision.twig
+++ b/templates/page-vision.twig
@@ -1,9 +1,9 @@
 {% extends "base.twig" %}
 
+{% set body_class = body_class ~ " vision" %}
+
 {% block content %}
 	<div class="content-wrapper">
-		<div class="vision">
-			{{post.content}}
-		</div>
+		{{post.content}}
 	</div><!-- /content-wrapper -->
 {% endblock %}
