--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -1,31 +1,53 @@
 {% extends "base.twig" %}
 
+{% block color %}
+  <div class="color-option" style="background-color: {{ post["color_" ~ i] }};"></div>
+{% endblock %}
+
 {% block content %}
 	<div class="content-wrapper">
-		{{ dump(post) }}
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-			<section class="article-content">
-				<h1 class="article-h1">DESIGN: {{post.title}}</h1>
-				<p class="blog-author">
-					<span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.post_date|date}}
-				</p>
-				<div class="article-body">
-					{{post.content}}
-				</div>
+			<section class="design">
+        <div class="row">
+          <div class="one-third">
+            <div class="img-wrap">
+              <img src="{{ TimberImage(post.image_1).src('large') }}">
+            </div>
+          </div>
+          {% if post.image_2 is not empty %}
+          <div class="one-third">
+            <div class="img-wrap">
+              <img src="{{ TimberImage(post.image_2).src('large') }}">
+            </div>
+          </div>
+          {% endif %}
+          <div class="one-third">
+            <div class="design__collection">{{ fn('masore_get_post_collection', post.id).name }}</div>
+            <h1 class="design__title">{{post.title}}</h1>
+            <div class="design__price">
+              <div class="label">Price:</div>
+              <div>€{{ post.price }}</div>
+            </div>
+            <div class="design__color-options">
+              <div class="label">Colors:</div>
+              {% for i in 1..post.color_options %}
+              <div class="design__color-option" style="background-color: {{ attribute(post, "color_" ~ i) }};"></div>
+              {% endfor %}
+            </div>
+            <p>{{ post.description }}</p>
+          </div>
+        </div>
 			</section>
-		{% if post.comment_status != 'closed' %}
-			<section class="comments">
-				<div class="respond">
-					<h3 class="h2">Comments</h3>
-					{{ fn('comment_form') }}
-				</div>
-				<div class="responses">
-					{% for cmt in post.get_comments() %}
-						{% include "comment.twig" with {comment:cmt} %}
-					{% endfor %}
-				</div>
-			</section>
-		{% endif %}
 		</article>
+    <div class="pagination">
+      <div class="row">
+        <div class="one-third previous-link">
+          {{ fn('next_post_link', '<< %link', '%title', true, '', 'collection') }}
+        </div>
+        <div class="one-third next-link">
+          {{ fn('previous_post_link', '%link >>', '%title', true, '', 'collection') }}
+        </div>
+      </div>
+    </div
 	</div><!-- /content-wrapper -->
 {% endblock %}
