--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,34 +1,33 @@
 // @import (less) "npm://normalize.css/normalize.css";
 @import "fonts";
+@import "grid";
+@import "base";
 @import "colors";
 @import "header";
 @import "nav";
 @import "footer";
 
 @import "page-frontpage";
+@import "page-collection";
+@import "page-collections";
+@import "page-design";
 @import "page-vision";
 
-html {
-  height: 100%;
-}
-body {
-  box-sizing: border-box;
-  margin: 0;
-  min-height: 100%;
-  border: 15px solid fade(black, 85%);
-  font-family: 'tuliaRegular', sans-serif;
-  background-color: #fdfdfd;
-  background-image: url(img/bg-white-noise-1.jpg);
-  background-repeat: repeat;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'tuliaBold', "arial black";
-}
 a {
   color: @primary;
 }
 .wrapper {
   padding-left: 2em;
   padding-right: 2em;
-  text-align: center;
+  // text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.img-wrap {
+  font-size: 0;
+  > img {
+    width: 100%;
+    height: auto;
+  }
 }
