--- a/src/less/page-collections.less
+++ b/src/less/page-collections.less
@@ -1,5 +1,6 @@
 .collection-teaser {
-  margin-bottom: 2em;
+  margin: 0 auto 2em;
+  max-width: 600px;
   &__image {
     background-color: fade(black, 10%);
     min-height: 100px;
