Change drop menu bg

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -32,6 +32,8 @@
       text-align: left;
       line-height: 1.5;
       background-color: fade(white, 70%);
+      background-image: url(img/bg-white-noise-1.jpg);
+      background-repeat: repeat;
       border-radius: 2px;
       transform: translateY(5px);
     }
