--- a/templates/taxonomy-collection.twig
+++ b/templates/taxonomy-collection.twig
@@ -10,7 +10,7 @@
         <div class="design-teaser">
           <a href="{{ post.link }}">
             <div class="img-wrap">
-              <img src="{{ TimberImage(post.image_1).src(medium) }}" alt="Image for {{post.title}}">
+              <img src="{{ TimberImage(post.image_1).src('large') }}" alt="Image for {{post.title}}">
             </div>
           </a>
           <a href="{{ post.link }}" class="design-teaser__title">{{ post.name }}</a>
