Add custom style

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -13,6 +13,8 @@
 @import "page-design";
 @import "page-vision";
 
+@import "luminous";
+
 a {
   color: @primary;
 }
@@ -23,7 +25,10 @@ a {
   max-width: 1000px;
   margin: 0 auto;
 }
-
+.image-gallery {
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
 .img-wrap {
   font-size: 0;
   > img {
