--- a/src/less/base.less
+++ b/src/less/base.less
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   min-height: 100%;
-  border: 15px solid fade(black, 85%);
+  border: 1em solid fade(black, 85%);
   font-family: 'tuliaRegular', sans-serif;
   background-color: #fdfdfd;
   background-image: url(img/bg-white-noise-1.jpg);
