--- a/src/less/luminous.less
+++ b/src/less/luminous.less
@@ -1,11 +1,11 @@
 .lum-lightbox {
-  background-color: fade(white, 90%);
+  background-color: fade(black, 80%);
 }
 
 .lum-lightbox-inner {
   img {
-    max-height: calc(100% - 2em);
-    box-shadow: 0 0 5em fade(black, 20%);
+    max-height: calc(~"100% - 2em");
+    box-shadow: 0 0 5em fade(black, 40%);
   }
 }
 
@@ -26,7 +26,7 @@
 }
 
 .lum-lightbox-loader {
-  display: none;
+  display: block;
 }
 
 .lum-gallery-button {
@@ -35,22 +35,22 @@
   height: 6em;
   width: 6em;
   background: none;
-  border-width: 3px 0 0 3px;
-  border-color: black transparent transparent black;
+  border-width: 2px 0 0 2px;
+  border-color: white transparent transparent white;
   border-style: solid;
   text-indent: -9999px;
   padding: 0;
   cursor: pointer;
   outline: none;
-  opacity: 0.4;
-  transition: opacity .5s, transform .3s;
+  opacity: 0.5;
+  transition: opacity .5s, transform 1s;
   &:hover,
   &:active {
     opacity: 1;
   }
 }
 .lum-previous-button {
-  left: 2em;
+  left: 3em;
   transform: scale(0.9) rotate(-45deg);
   &:hover,
   &:active {
@@ -58,10 +58,14 @@
   }
 }
 .lum-next-button {
-  right: 2em;
+  right: 3em;
   transform: scale(0.9) rotate(135deg);
   &:hover,
   &:active {
     transform: scale(0.95) rotate(135deg);
   }
+}
+
+.lum-lightbox-caption {
+  margin: 0;
 }
