--- a/src/less/luminous.less
+++ b/src/less/luminous.less
@@ -1,5 +1,5 @@
 .lum-lightbox {
-  background-color: fade(black, 80%);
+  background-color: fade(white, 90%);
 }
 
 .lum-lightbox-inner {
@@ -36,7 +36,7 @@
   width: 6em;
   background: none;
   border-width: 2px 0 0 2px;
-  border-color: white transparent transparent white;
+  border-color: black transparent transparent black;
   border-style: solid;
   text-indent: -9999px;
   padding: 0;
@@ -50,7 +50,7 @@
   }
 }
 .lum-previous-button {
-  left: 3em;
+  left: 4em;
   transform: scale(0.9) rotate(-45deg);
   &:hover,
   &:active {
@@ -58,7 +58,7 @@
   }
 }
 .lum-next-button {
-  right: 3em;
+  right: 4em;
   transform: scale(0.9) rotate(135deg);
   &:hover,
   &:active {
