--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -5,7 +5,7 @@
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="design">
         <div class="row">
-          <div class="one-third">
+          <div class="sm-full-width md-one-third">
             <a href="{{ TimberImage(post.image_1).src|resize(0, 1500) }}" class="image image-gallery">
               <div class="img-wrap">
                 <img src="{{ TimberImage(post.image_1).src('large') }}">
@@ -13,7 +13,7 @@
             </a>
           </div>
           {% if post.image_2 is not empty %}
-          <div class="one-third">
+          <div class="sm-full-width md-one-third">
             <a href="{{ TimberImage(post.image_2).src|resize(0, 1500) }}" class="image image-gallery">
               <div class="img-wrap">
                 <img src="{{ TimberImage(post.image_2).src('large') }}">
@@ -21,7 +21,7 @@
             </a>
           </div>
           {% endif %}
-          <div class="one-third">
+          <div class="sm-full-width md-one-third">
             <div class="design__collection">{{ fn('masore_get_post_collection', post.id).name }}</div>
             <h1 class="design__title">{{post.title}}</h1>
             <div class="design__price">
@@ -41,10 +41,10 @@
 		</article>
     <div class="pagination">
       <div class="row">
-        <div class="one-third previous-link">
+        <div class="sm-one-half previous-link">
           {{ fn('next_post_link', '<< %link', '%title', true, '', 'collection') }}
         </div>
-        <div class="one-third next-link">
+        <div class="sm-one-half next-link">
           {{ fn('previous_post_link', '%link >>', '%title', true, '', 'collection') }}
         </div>
       </div>
