--- a/templates/taxonomy-collection.twig
+++ b/templates/taxonomy-collection.twig
@@ -6,7 +6,7 @@
     <h1 class="collection__title">{{ term.name }}</h1>
     <div class="row">
       {% for post in posts %}
-      <div class="one-fourth">
+      <div class="sm-one-half md-one-fourth">
         <div class="design-teaser">
           <a href="{{ post.link }}">
             <div class="img-wrap">
