Tweak lightbox buttons

--- a/src/less/luminous.less
+++ b/src/less/luminous.less
@@ -31,9 +31,9 @@
 
 .lum-gallery-button {
   position: absolute;
-  top: calc(50% - 3em);
-  height: 6em;
-  width: 6em;
+  top: calc(~"50% - 1.5em");
+  height: 3em;
+  width: 3em;
   background: none;
   border-width: 2px 0 0 2px;
   border-color: black transparent transparent black;
@@ -48,21 +48,32 @@
   &:active {
     opacity: 1;
   }
+  @media (min-width: @tablet) {
+    top: calc(~"50% - 3em");
+    height: 6em;
+    width: 6em;
+  }
 }
 .lum-previous-button {
-  left: 4em;
+  left: 2em;
   transform: scale(0.9) rotate(-45deg);
   &:hover,
   &:active {
     transform: scale(0.95) rotate(-45deg);
   }
+  @media (min-width: @tablet) {
+    left: 4em;
+  }
 }
 .lum-next-button {
-  right: 4em;
+  right: 2em;
   transform: scale(0.9) rotate(135deg);
   &:hover,
   &:active {
     transform: scale(0.95) rotate(135deg);
+  }
+  @media (min-width: @tablet) {
+    right: 4em;
   }
 }
 
