--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -31,7 +31,7 @@
             <div class="design__color-options">
               <div class="label">Colors:</div>
               {% for i in 1..post.color_options %}
-              <div class="design__color-option" title="{{ attribute(post, "color_" ~ i ~ "_name")|trim }}" style="background-color: {{ attribute(post, "color_" ~ i) }};"></div>
+              <div data-href="{{ TimberImage(attribute(post, "color_" ~ i ~ "_fabric")).src('large') }}" class="design__color-option image-fabric" title="{{ attribute(post, "color_" ~ i ~ "_name")|trim }}" style="background-color: {{ attribute(post, "color_" ~ i) }}; background-image: url({{ TimberImage(attribute(post, "color_" ~ i ~ "_fabric")).src|resize(100) }}); "></div>
               {% endfor %}
             </div>
             <p>{{ post.description }}</p>
