Print link when fabric image is available.

--- a/src/less/page-design.less
+++ b/src/less/page-design.less
@@ -19,11 +19,12 @@
   }
   &__color-option {
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+    width: 3em;
+    height: 3em;
     border: 1px solid black;
-    &:not([data-href=""]) {
+    background-position: center;
+    background-size: 150%;
+    a& {
       cursor: -webkit-zoom-in;
       cursor: zoom-in;
     }
