--- a/src/less/page-collections.less
+++ b/src/less/page-collections.less
@@ -1,6 +1,7 @@
 .collection-teaser {
   margin: 0 auto 2em;
-  max-width: 600px;
+  width: 700px;
+  max-width: 100%;
   &__image {
     background-color: fade(black, 10%);
     min-height: 100px;
