Change currency to DKK

--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -26,7 +26,7 @@
             <h1 class="design__title">{{post.title}}</h1>
             <div class="design__price">
               <div class="label">Price:</div>
-              <div>€{{ post.price }}</div>
+              <div>DKK {{ post.price }}</div>
             </div>
             <div class="design__color-options">
               <div class="label">Colors:</div>
