--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -42,6 +42,7 @@
               {% endfor %}
             </div>
             <p>{{ post.description }}</p>
+            <p>Buy item please contact via email: <a href="mailto:contact@masore.com?subject={{post.title}}">contact@masore.com</a></p>
           </div>
         </div>
 			</section>
