--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -18,14 +18,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="pingback" href="{{site.pingback_url}}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/icons/manifest.json">
-    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{site.theme.link}}/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="{{site.theme.link}}/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{site.theme.link}}/icons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="{{site.theme.link}}/icons/manifest.json">
+    <link rel="mask-icon" href="{{site.theme.link}}/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="{{site.theme.link}}/icons/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Masor&eacute;">
     <meta name="application-name" content="Masor&eacute;">
-    <meta name="msapplication-config" content="/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="{{site.theme.link}}/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     {{function('wp_head')}}
