--- a/src/less/base.less
+++ b/src/less/base.less
@@ -19,6 +19,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'tuliaBold', "arial black";
 }
 
+strong, b {
+  font-family: 'tuliaBold', "arial black";
+  font-weight: normal;
+}
+
 .wrapper {
   padding-left: 0.6em;
   padding-right: 0.6em;
