--- a/src/less/page-about.less
+++ b/src/less/page-about.less
@@ -1,4 +1,4 @@
-.vision {
+.about {
   #content {
     margin: 3em auto;
     max-width: 500px;
@@ -7,12 +7,6 @@
       line-height: 1.5;
       color: fade(black, 75%);
       margin-bottom: 1em;
-      //transition: all 2s;
-      // &:hover,
-      // &:focus {
-      //   color: fade(black, 100%);
-      //   transform: scale(1.03, 1.03);
-      // }
     }
   }
 }
