--- a/templates/page-collections.twig
+++ b/templates/page-collections.twig
@@ -1,19 +1,20 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
-		{% for collection in fn('masore_get_collections') %}
+  <div class="content-wrapper">
+    {% for collection in fn('masore_get_collections') %}
       {% set collection = TimberTerm(collection.term_id) %}
-			<div class="collection-teaser">
+      <div class="collection-teaser">
+        <a href="{{ collection.link }}" class="collection-teaser__title">{{ collection.title }}</a>
         <a href="{{ collection.link }}">
           <div class="img-wrap">
             <img src="{{ TimberImage(collection.image).src('large') }}" class="collection-teaser__image">
           </div>
         </a>
-				<a href="{{ collection.link }}" class="collection-teaser__title">{{ collection.title }}</a>
-			</div>
-		{% else %}
-			No collections found.
-		{% endfor %}
-	</div><!-- /content-wrapper -->
+      </div>
+    {% else %}
+      No collections found.
+    {% endfor %}
+  </div>
+  <!-- /content-wrapper -->
 {% endblock %}
