--- a/src/less/main.less
+++ b/src/less/main.less
@@ -12,6 +12,8 @@
 @import "page-collections";
 @import "page-design";
 @import "page-vision";
+@import "page-about";
+@import "page-press";
 
 @import "luminous";
 
