--- a/src/less/base.less
+++ b/src/less/base.less
@@ -24,6 +24,10 @@ strong, b {
   font-weight: normal;
 }
 
+#content {
+  margin: 3em auto;
+}
+
 .wrapper {
   padding-left: 0.6em;
   padding-right: 0.6em;
