--- a/src/less/page-about.less
+++ b/src/less/page-about.less
@@ -1,12 +1,3 @@
 .about {
-  #content {
-    margin: 3em auto;
-    max-width: 500px;
-    p {
-      font-size: 15pt;
-      line-height: 1.5;
-      color: fade(black, 75%);
-      margin-bottom: 1em;
-    }
-  }
+  .page-narrow;
 }
