--- a/src/less/page-frontpage.less
+++ b/src/less/page-frontpage.less
@@ -1,7 +1,9 @@
 .frontpage {
-  text-align: center;
-  img {
-    width: 100%;
-    height: auto;
+  #content {
+    text-align: center;
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 }
