--- a/templates/page-frontpage.twig
+++ b/templates/page-frontpage.twig
@@ -1,12 +1,12 @@
 {% extends "base.twig" %}
 
+{% set body_class = body_class ~ " frontpage" %}
+
 {% block content %}
   <div class="content-wrapper">
-    <div class="frontpage">
-      {{post.content}}
-      <div class="img-wrap">
-        <img src="{{post.thumbnail.src|resize(1000)}}" class="frontpage__image" title="{{ post.thumbnail.caption }}" alt="Image for {{post.title}}"/>
-      </div>
+    {{post.content}}
+    <div class="img-wrap">
+      <img src="{{post.thumbnail.src|resize(1000)}}" class="frontpage__image" title="{{ post.thumbnail.caption }}" alt="Image for {{post.title}}"/>
     </div>
   </div>
 {% endblock %}
