Tweak styling for press and contact pages.

--- a/src/less/page-press.less
+++ b/src/less/page-press.less
@@ -1,6 +1,9 @@
 .press {
   .page-narrow;
   #content {
+    ul {
+      font-size: initial;
+    }
     img {
       border: 0.4em solid black;
       margin-top: 10px;
