--- a/templates/single-design.twig
+++ b/templates/single-design.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
+  {% set collection = fn('masore_get_post_collection', post.id) %}
 	<div class="content-wrapper">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="design">
@@ -22,7 +23,7 @@
           </div>
           {% endif %}
           <div class="sm-full-width md-one-third">
-            <div class="design__collection">{{ fn('masore_get_post_collection', post.id).name }}</div>
+            <div class="design__collection">{{ collection.name }}</div>
             <h1 class="design__title">{{post.title}}</h1>
             <div class="design__price">
               <div class="label">Price:</div>
@@ -49,7 +50,7 @@
 		</article>
     <div class="pagination">
       <div class="row">
-        {% set links = fn('masore_adjacent_designs') %}
+        {% set links = fn('masore_adjacent_designs', post, collection) %}
         <div class="sm-one-half previous-link">
           {% if links.prev is not empty %}
             <span>&lt;&lt; <a href="{{ links.prev.link }}" rel="prev">{{ links.prev.post_title }}</a></span>
