Add title as class to all pages and remove redundant templates

--- a/templates/page-collections.twig
+++ b/templates/page-collections.twig
@@ -1,5 +1,7 @@
 {% extends "base.twig" %}
 
+{% set body_class = [body_class, 'collections']|join(' ') %}
+
 {% block content %}
   <div class="content-wrapper">
     {% for collection in fn('masore_get_collections') %}
