--- a/templates/page.twig
+++ b/templates/page.twig
@@ -1,5 +1,7 @@
 {% extends "base.twig" %}
 
+{% set body_class = [body_class, post.title|lower]|join(' ') %}
+
 {% block content %}
 	<div class="content-wrapper">
 		{{post.content}}
