--- a/templates/taxonomy-collection.twig
+++ b/templates/taxonomy-collection.twig
@@ -1,5 +1,7 @@
 {% extends "base.twig" %}
 
+{% set body_class = [body_class, 'collection']|join(' ') %}
+
 {% block content %}
   <div class="content-wrapper">
     <div class="collection__lead">Collection</div>
