--- a/src/less/header.less
+++ b/src/less/header.less
@@ -6,7 +6,7 @@ header {
       margin-top: 2em;
     }
     img {
-      width: 300px;
+      width: 15rem;
       max-width: 80%;
       height: auto;
       transition: all 2s;
