--- a/src/less/main.less
+++ b/src/less/main.less
@@ -34,6 +34,23 @@ a {
     height: auto;
   }
 }
+.media-wrap {
+  font-size: 0;
+  position: relative;
+  overflow: hidden;
+  > video {
+    width: 100%;
+    height: auto;
+    margin-top: -3rem;
+    margin-bottom: -3rem;
+  }
+}
 .inactive {
   color: fade(black, 30%);
+}
+.media-icon {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
 }
