Add playfair font

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -5,17 +5,17 @@
     font-weight: normal;
     font-style: normal;
 }
+// @font-face {
+//     font-family: 'playfairRegular';
+//     src: url('fonts/playfairdisplay-regular-webfont.woff2') format('woff2'),
+//          url('fonts/playfairdisplay-regular-webfont.woff') format('woff');
+//     font-weight: normal;
+//     font-style: normal;
+// }
 @font-face {
-    font-family: 'tuliaBold';
-    src: url('fonts/tulia_bold-webfont.woff2') format('woff2'),
-         url('fonts/tulia_bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'tuliaItalic';
-    src: url('fonts/tulia_italic-webfont.woff2') format('woff2'),
-         url('fonts/tulia_italic-webfont.woff') format('woff');
+    font-family: 'playfairBold';
+    src: url('fonts/playfairdisplay-bold-webfont.woff2') format('woff2'),
+         url('fonts/playfairdisplay-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
