Remove tuliaBold and replace with playfair bold for headings

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -16,12 +16,9 @@ body {
   }
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'tuliaBold', "arial black";
-}
-
-strong, b {
-  font-family: 'tuliaBold', "arial black";
+  font-family: 'playfairBold', "serif";
   font-weight: normal;
+  color: fade(black, 80%);
 }
 
 #content {
