--- a/templates/base.twig
+++ b/templates/base.twig
@@ -12,7 +12,7 @@
 				<div class="wrapper">
           			<div class="logo">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home" title="{{site.name}}">
-							<img alt="{{site.name}}" src="{{ theme.link }}/assets/img/masore-uc.svg">
+							<img alt="{{site.name}}" src="{{ theme.link }}/assets/img/masore-uc.svg" alt="Masoré logo">
 						</a>
 					</div>
 					<nav id="nav-main" class="nav-main" role="navigation">
