--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -4,6 +4,7 @@
          url('fonts/tulia_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: auto;
 }
 // @font-face {
 //     font-family: 'playfairRegular';
@@ -18,4 +19,5 @@
          url('fonts/playfairdisplay-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: auto;
 }
