Add GitHub Theme URI and update version to 1.9.0

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /*
- Theme Name:   Masore Theme
- Theme URI:    https://github.com/cenobitedk/masore-theme
- Description:  Child theme built with Timber
- Author:       Jeppe Hasseriis
- Template:     timber-starter-theme
- Version:      1.8.0
- License:      MIT
- License URI:  https://opensource.org/licenses/MIT
+ Theme Name:        Masore Theme
+ Theme URI:         https://github.com/cenobitedk/masore-theme
+ GitHub Theme URI:  https://github.com/cenobitedk/masore-theme
+ Description:       Child theme built with Timber
+ Author:            Jeppe Hasseriis
+ Template:          timber-starter-theme
+ Version:           1.9.0
+ License:           MIT
+ License URI:       https://opensource.org/licenses/MIT
 */
