--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -4,20 +4,14 @@
          url('fonts/tulia_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: auto;
+    font-display: swap;
 }
-// @font-face {
-//     font-family: 'playfairRegular';
-//     src: url('fonts/playfairdisplay-regular-webfont.woff2') format('woff2'),
-//          url('fonts/playfairdisplay-regular-webfont.woff') format('woff');
-//     font-weight: normal;
-//     font-style: normal;
-// }
+
 @font-face {
     font-family: 'playfairBold';
     src: url('fonts/playfairdisplay-bold-webfont.woff2') format('woff2'),
          url('fonts/playfairdisplay-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: auto;
+    font-display: swap;
 }
